# ace-reel-avatars

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  demo.yml
bands/: demo_trio.json  house.json
docs/: 00-discovery.md  01-architecture.md  SESSION-RECAP.md  add-a-render-target.md  runbook-cloud-rtx.md  setup-nvidia-ace.md  setup-reel-engine.md
docs/plans/: 2026-05-30-avatar-house-band.md  2026-05-30-template-spine.md
docs/specs/: 2026-05-30-avatar-house-band-design.md
examples/: demo_band.py  suno_band.py
prompts/: RESUME-how-we-got-here.prompt.md  avatar-house-band.prompt.md  hermes-two-agents.prompt.md
src/ace_reel/: cli.py  orchestrator.py
src/ace_reel/ace/: ace_client.py  blendshape_map.py
src/ace_reel/band/: arranger.py  orchestrator.py  performance.py  roster.py
src/ace_reel/contracts/: frame.py  interfaces.py
src/ace_reel/motion/: beat.py  planner.py
src/ace_reel/music/: aimymusic_suno.py
src/ace_reel/render/: band_base.py  base.py  unreal_band.py  unreal_livelink.py
tests/: fakes.py  test_ace_client.py  test_band_arranger.py  test_band_cli.py  test_band_orchestrator.py  test_band_render.py  test_band_roster.py  test_beat.py  test_blendshape_map.py  test_cli.py  test_frame.py  test_interfaces.py  test_music_source.py  test_orchestrator.py  test_planner.py  test_render.py  test_shipped_bands.py  test_unreal_stub.py
